@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
'left to right direction
skinparam classAttributeIconSize 0
hide circle
hide methods

title Domain Model


class Employee{
name
citizen_card_number
tax_number
address
email_address
contact
employeeRole
}

class SystemAdministrator{
id/email
password
}

class Agent{
id/email
password
}
class Owner{
id/email
password
}



class Agency{
ID
designation
location
local_manager
phone_number
email
}

class  UnregisteredUser{
id/email
password
}


class Property {
    type
    area
    location
    distance_from_the_city_centre
    requested_price
    photos
    }

class Announcement {
        description
        comission
      }

class Apartment{
    number_of_bedrooms
    number_of_bathrooms
    number_of_parking_spaces
    existence_of_central_heating
    existence_of_air_conditioning
}

class House{
    number_of_bedrooms
    number_of_bathrooms
    number_of_parking spaces
    existence_of_central heating
    existence_of_air_conditioning
    existence_of_a_basement
    existence_of_an_inhabitable_loft
    existence_of_sun_exposure
}

class Land{
type
area
location
distance_from_the_city_centre
requested_price
photos

}


Agent "1" -- "1..*" Announcement : publishes an >
Agency "1" -- "1..*" Agent : has a  >
SystemAdministrator "1" -- "1..*" Employee : registers a >
Employee "1..*" -- "1" Agency : is assigned to >
SystemAdministrator "1" -- "1..*" Employee : defines the role of >
Owner "1" -- "1..*" Property : owns >
Property "1" -- "*" House :  can be >
Property "1" -- "*" Apartment :  can be >
Property "1" -- "*" Land :  can be >
Owner "1" -- "1" Agent : selects the >
Agency "1" -- "1" SystemAdministrator : has a  >
Agency "1" -- "1" Agent: has a  >



@enduml